@@ -26,11 +26,11 @@ dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
     compile 'commons-net:commons-net:3.8.0'
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
-    compile 'org.apache.logging.log4j:log4j-api:2.18.0'
-    compile 'org.apache.logging.log4j:log4j-core:2.18.0'
-    compile 'com.oracle.database.jdbc:ojdbc8:21.4.0.0'
-    compile 'org.springframework:spring-beans:5.3.22'
-    compile 'org.springframework:spring-jdbc:5.3.22'
+    compile 'org.apache.logging.log4j:log4j-api:2.19.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.19.0'
+    compile 'com.oracle.database.jdbc:ojdbc8:21.5.0.0'
+    compile 'org.springframework:spring-beans:5.3.23'
+    compile 'org.springframework:spring-jdbc:5.3.23'
     compile 'com.io7m.xom:xom:1.2.10'
 
     compile fileTree(dir: 'lib', include: '*.jar')
