@@ -869,20 +869,13 @@ public class OntologyDAO {
         return omimIds;
     }
 
-    public String getOmimPSTermAccForChildTerm(String childTermAcc, CounterPool counters) throws Exception {
+    public List<String> getOmimPSTermAccForChildTerm(String childTermAcc, CounterPool counters) throws Exception {
         String sql = "SELECT term_acc FROM ont_synonyms WHERE synonym_name IN\n" +
                 "(SELECT phenotypic_series_number omim_ps FROM omim_phenotypic_series WHERE phenotype_mim_number IN\n"+
                 " (SELECT synonym_name FROM ont_synonyms WHERE term_acc=? AND synonym_name like 'OMIM:______')"+
                 ")";
         List<String> termAccIds = StringListQuery.execute(dao, sql, childTermAcc);
-        if( termAccIds.isEmpty() ) {
-            return null;
-        }
-        if( termAccIds.size()>1 ) {
-            counters.increment("OMIM:PS problem: multiple OMIM:PS parents for child term "+childTermAcc+": "+Utils.concatenate(termAccIds,","));
-            return null;
-        }
-        return termAccIds.get(0);
+        return termAccIds;
     }
 
     public List<String> getChildParentDoMappings() throws Exception {
